done first section

--- a/index.html
+++ b/index.html
@@ -15,10 +15,21 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Metal+Mania" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/solid.css" integrity="sha384-r/k8YTFqmlOaqRkZuSiE9trsrDXkh07mRaoGBMoDcmA58OHILZPsk29i2BsFng1B"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/regular.css" integrity="sha384-IG162Tfx2WTn//TRUi9ahZHsz47lNKzYOp0b6Vv8qltVlPkub2yj9TVwzNck6GEF"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/brands.css" integrity="sha384-BKw0P+CQz9xmby+uplDwp82Py8x1xtYPK3ORn/ZSoe6Dk3ETP59WCDnX+fI1XCKK"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/fontawesome.css" integrity="sha384-4aon80D8rXCGx9ayDt85LbyUHeMWd3UiBaWliBlJ53yzm9hqN21A+o1pqoyK04h+"
+        crossorigin="anonymous">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Z<span><img src="https://img.icons8.com/color/48/000000/illuminati.png"></span>EZD</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,11 +46,13 @@
                         Trips
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Trip1</a>
-                        <a class="dropdown-item" href="#">Trip2</a>
-                        <a class="dropdown-item" href="#">Trip3</a>
+                        <a class="dropdown-item" href="#">Pussy trip<i class="fas fa-walking"></i></a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Create own trip</a>
+                        <a class="dropdown-item" href="#">Savarage trip<i class="fab fa-studiovinari"></i></a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Try escape trip<i class="fas fa-skull-crossbones"></i></a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Create own trip<i class="fas fa-user-secret"></i></a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -59,7 +72,16 @@
         </div>
     </nav>
     <section id="sec-1">
-        <img src="IMG-8091.jpeg" alt="page-title">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-10 col-lg-10 info">
+                    <h2>The easiest way to plan personalized trips with local travel experts</h2>
+                    <p>Get your vacation custom-made by a trip designer that know what the guidebooks don’t</p>
+                    <a href="" class="btn btn-lg">Explore</a>
+                </div>
+            </div>
+        </div>
+
     </section>
     <script src="./dist/main.js"></script>
 </body>
