second section betav2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="src/assets/css/font-awesome-all.min.css" rel="stylesheet">
     <link href="src/assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300,500,600" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:500,400,700,800,300,600" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Metal+Mania" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet" type="text/css">
     <link href="src/assets/css/index.css" rel="stylesheet">
@@ -42,6 +42,10 @@
                         <a class="dropdown-item" href="#">Try escape trip<i class="fas fa-skull-crossbones"></i></a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Train trip<i class="fas fa-user-secret"></i></a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Train trip<i class="fas fa-user-secret"></i></a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Train trip<i class="fas fa-user-secret"></i></a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -73,15 +77,15 @@
     </section>
     <section id="sec-2">
         <div class="container">
-            <div class="row justify-content-between">
+            <div class="row justify-content-center">
                 <header>
                     <h2>Vitae lacus dictum?</h2>
-                    <p>Orem ipsum dolor sit amet, consectetur adipiscing elit. Integer feugiat nunc sollicitudin mi
-                        condimentum, a sollicitudin eros malesuada. Aene</p>
+                    <p>Orem ipsum dolor sit amet, nunc sollicitudin mi
+                        condimentum, a sollicitudin eros malesuada.</p>
                 </header>
                 <div class="card">
                     <div class="card-body">
-                        <i class="fas fa-user-secret"></i>
+                        <i class="fas fa-walking"></i>
                         <h3>Maecenas ornare nisi in ipsum</h3>
                         <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
                             text here</p>
@@ -90,12 +94,12 @@
                         <img src="src/assets/images/sec-1.jpg" alt="">
                     </div>
                     <div class="card-footer">
-                        <a href="#">Rating</a>
+                        <a class='btn btn-danger' href="#">Start riding</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <i class="fas fa-user-secret"></i>
+                        <i class="fas fa-walking"></i>
                         <h3>Maecenas ornare nisi in ipsum</h3>
                         <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
                             text here</p>
@@ -104,12 +108,12 @@
                         <img src="src/assets/images/sec-1.jpg" alt="">
                     </div>
                     <div class="card-footer">
-                        <a href="#">Rating</a>
+                        <a class='btn btn-danger' href="#">Rating</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <i class="fas fa-user-secret"></i>
+                        <i class="fas fa-walking"></i>
                         <h3>Maecenas ornare nisi in ipsum</h3>
                         <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
                             text here</p>
@@ -118,7 +122,49 @@
                         <img src="src/assets/images/sec-1.jpg" alt="">
                     </div>
                     <div class="card-footer">
-                        <a href="#">Rating</a>
+                        <a class='btn btn-danger' href="#">Rating</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <i class="fas fa-walking"></i>
+                        <h3>Maecenas ornare nisi in ipsum</h3>
+                        <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
+                            text here</p>
+                    </div>
+                    <div class="card-image">
+                        <img src="src/assets/images/sec-1.jpg" alt="">
+                    </div>
+                    <div class="card-footer">
+                        <a class='btn btn-danger' href="#">Rating</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <i class="fas fa-walking"></i>
+                        <h3>Maecenas ornare nisi in ipsum</h3>
+                        <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
+                            text here</p>
+                    </div>
+                    <div class="card-image">
+                        <img src="src/assets/images/sec-1.jpg" alt="">
+                    </div>
+                    <div class="card-footer">
+                        <a class='btn btn-danger' href="#">Rating</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <i class="fas fa-walking"></i>
+                        <h3>Maecenas ornare nisi in ipsum</h3>
+                        <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
+                            text here</p>
+                    </div>
+                    <div class="card-image">
+                        <img src="src/assets/images/sec-1.jpg" alt="">
+                    </div>
+                    <div class="card-footer">
+                        <a class='btn btn-danger' href="#">Rating</a>
                     </div>
                 </div>
             </div>
