second section betaV3

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <i class="fas fa-walking"></i>
+                        <i class="fab fa-studiovinari"></i>
                         <h3>Maecenas ornare nisi in ipsum</h3>
                         <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
                             text here</p>
@@ -108,12 +108,12 @@
                         <img src="src/assets/images/sec-1.jpg" alt="">
                     </div>
                     <div class="card-footer">
-                        <a class='btn btn-danger' href="#">Rating</a>
+                        <a class='btn btn-danger' href="#">Start riding</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <i class="fas fa-walking"></i>
+                        <i class="fas fa-skull-crossbones"></i>
                         <h3>Maecenas ornare nisi in ipsum</h3>
                         <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
                             text here</p>
@@ -122,12 +122,12 @@
                         <img src="src/assets/images/sec-1.jpg" alt="">
                     </div>
                     <div class="card-footer">
-                        <a class='btn btn-danger' href="#">Rating</a>
+                        <a class='btn btn-danger' href="#">Start riding</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <i class="fas fa-walking"></i>
+                        <i class="fas fa-user-secret"></i>
                         <h3>Maecenas ornare nisi in ipsum</h3>
                         <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
                             text here</p>
@@ -136,12 +136,12 @@
                         <img src="src/assets/images/sec-1.jpg" alt="">
                     </div>
                     <div class="card-footer">
-                        <a class='btn btn-danger' href="#">Rating</a>
+                        <a class='btn btn-danger' href="#">Start riding</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <i class="fas fa-walking"></i>
+                        <i class="fas fa-user-secret"></i>
                         <h3>Maecenas ornare nisi in ipsum</h3>
                         <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
                             text here</p>
@@ -150,12 +150,12 @@
                         <img src="src/assets/images/sec-1.jpg" alt="">
                     </div>
                     <div class="card-footer">
-                        <a class='btn btn-danger' href="#">Rating</a>
+                        <a class='btn btn-danger' href="#">Start riding</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <i class="fas fa-walking"></i>
+                        <i class="fas fa-user-secret"></i>
                         <h3>Maecenas ornare nisi in ipsum</h3>
                         <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
                             text here</p>
@@ -164,7 +164,7 @@
                         <img src="src/assets/images/sec-1.jpg" alt="">
                     </div>
                     <div class="card-footer">
-                        <a class='btn btn-danger' href="#">Rating</a>
+                        <a class='btn btn-danger' href="#">Start riding</a>
                     </div>
                 </div>
             </div>
