--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">Pussy trip<i class="fas fa-walking"></i></a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Savarage trip<i class="fab fa-studiovinari"></i></a>
+                        <a class="dropdown-item" href="#">Savage trip<i class="fab fa-studiovinari"></i></a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Try escape trip<i class="fas fa-skull-crossbones"></i></a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Train trip<i class="fas fa-user-secret"></i></a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Train trip<i class="fas fa-user-secret"></i></a>
+                        <a class="dropdown-item" href="#">No road trip<i class="fas fa-book-dead"></i></a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Train trip<i class="fas fa-user-secret"></i></a>
+                        <a class="dropdown-item" href="#">Speed hack trip<i class="fas fa-dragon"></i></a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -86,12 +86,12 @@
                 <div class="card">
                     <div class="card-body">
                         <i class="fas fa-walking"></i>
-                        <h3>Maecenas ornare nisi in ipsum</h3>
-                        <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
-                            text here</p>
+                        <h3>Pussy trip</h3>
+                        <p>Integer interdum nulla justo, eu porttitor arcu malesuada sit amet. Maecenas dictum ex sed
+                            metus cursus, vitae egestas purus commodo...</p>
                     </div>
                     <div class="card-image">
-                        <img src="src/assets/images/sec-1.jpg" alt="">
+                        <img src="src/assets/images/gallery-1.jpg" alt="">
                     </div>
                     <div class="card-footer">
                         <a class='btn btn-danger' href="#">Start riding</a>
@@ -100,12 +100,12 @@
                 <div class="card">
                     <div class="card-body">
                         <i class="fab fa-studiovinari"></i>
-                        <h3>Maecenas ornare nisi in ipsum</h3>
-                        <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
-                            text here</p>
+                        <h3>Savage trip</h3>
+                        <p>Integer interdum nulla justo, eu porttitor arcu malesuada sit amet. Maecenas dictum ex sed
+                            metus cursus, vitae egestas purus commodo...</p>
                     </div>
                     <div class="card-image">
-                        <img src="src/assets/images/sec-1.jpg" alt="">
+                        <img src="src/assets/images/gallery-2.jpg" alt="">
                     </div>
                     <div class="card-footer">
                         <a class='btn btn-danger' href="#">Start riding</a>
@@ -114,12 +114,12 @@
                 <div class="card">
                     <div class="card-body">
                         <i class="fas fa-skull-crossbones"></i>
-                        <h3>Maecenas ornare nisi in ipsum</h3>
-                        <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
-                            text here</p>
+                        <h3>Try escape trip</h3>
+                        <p>Integer interdum nulla justo, eu porttitor arcu malesuada sit amet. Maecenas dictum ex sed
+                            metus cursus, vitae egestas purus commodo...</p>
                     </div>
                     <div class="card-image">
-                        <img src="src/assets/images/sec-1.jpg" alt="">
+                        <img src="src/assets/images/gallery-3.jpeg" alt="">
                     </div>
                     <div class="card-footer">
                         <a class='btn btn-danger' href="#">Start riding</a>
@@ -128,12 +128,12 @@
                 <div class="card">
                     <div class="card-body">
                         <i class="fas fa-user-secret"></i>
-                        <h3>Maecenas ornare nisi in ipsum</h3>
-                        <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
-                            text here</p>
+                        <h3>Train trip</h3>
+                        <p>Integer interdum nulla justo, eu porttitor arcu malesuada sit amet. Maecenas dictum ex sed
+                            metus cursus, vitae egestas purus commodo...</p>
                     </div>
                     <div class="card-image">
-                        <img src="src/assets/images/sec-1.jpg" alt="">
+                        <img src="src/assets/images/gallery-4.jpg" alt="">
                     </div>
                     <div class="card-footer">
                         <a class='btn btn-danger' href="#">Start riding</a>
@@ -141,13 +141,13 @@
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <i class="fas fa-user-secret"></i>
-                        <h3>Maecenas ornare nisi in ipsum</h3>
-                        <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
-                            text here</p>
+                        <i class="fas fa-book-dead"></i>
+                        <h3>No road trip</h3>
+                        <p>Integer interdum nulla justo, eu porttitor arcu malesuada sit amet. Maecenas dictum ex sed
+                            metus cursus, vitae egestas purus commodo...</p>
                     </div>
                     <div class="card-image">
-                        <img src="src/assets/images/sec-1.jpg" alt="">
+                        <img src="src/assets/images/gallery-5.jpg" alt="">
                     </div>
                     <div class="card-footer">
                         <a class='btn btn-danger' href="#">Start riding</a>
@@ -155,13 +155,13 @@
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <i class="fas fa-user-secret"></i>
-                        <h3>Maecenas ornare nisi in ipsum</h3>
-                        <p>Some text hereSome text hereSome text hereSome text hereSome text hereSome text hereSome
-                            text here</p>
+                        <i class="fas fa-dragon"></i>
+                        <h3>Speed hack trip</h3>
+                        <p>Integer interdum nulla justo, eu porttitor arcu malesuada sit amet. Maecenas dictum ex sed
+                            metus cursus, vitae egestas purus commodo...</p>
                     </div>
                     <div class="card-image">
-                        <img src="src/assets/images/sec-1.jpg" alt="">
+                        <img src="src/assets/images/gallery-6.jpg" alt="">
                     </div>
                     <div class="card-footer">
                         <a class='btn btn-danger' href="#">Start riding</a>
