change page title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Jarki Zaezd</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="src/assets/css/font-awesome-all.min.css" rel="stylesheet">
     <link href="src/assets/css/bootstrap.min.css" rel="stylesheet">
