add big calendar on page

--- a/index.html
+++ b/index.html
@@ -184,15 +184,144 @@
                 <a href="" class="btn btn-success">Plan trip</a>
             </div>
             <div class="calendar-body">
-                <div class="calendar-nav"></div>
+                <div class="calendar-nav">
+                    <a href="" class="prev">
+                        <i class="fa fa-chevron-left"></i>Jan 2019
+                    </a>
+                    <h4 class="title">February 2019</h4>
+                    <a href="" class="next">
+                        Mar 2019<i class="fa fa-chevron-right"></i>
+                    </a>
+                </div>
                 <table>
                     <thead>
                         <tr>
-                            <th>one</th>
-                            <th>two</th>
-                            <th>three</th>
+                            <th>Sun</th>
+                            <th>Mon</th>
+                            <th>Tue</th>
+                            <th>Wed</th>
+                            <th>Thu</th>
+                            <th>Fri</th>
+                            <th>Sat</th>
                         </tr>
                     </thead>
+                    <tbody>
+                        <tr>
+                            <th>
+                                <div class="date">27</div>
+                            </th>
+                            <th>
+                                <div class="date">28</div>
+                            </th>
+                            <th>
+                                <div class="date">29</div>
+                            </th>
+                            <th>
+                                <div class="date">30</div>
+                            </th>
+                            <th>
+                                <div class="date">31</div>
+                            </th>
+                            <th>
+                                <div class="date">1</div>
+                            </th>
+                            <th>
+                                <div class="date">2</div>
+                            </th>
+                        </tr>
+                        <tr>
+                            <th>
+                                <div class="date">3</div>
+                            </th>
+                            <th>
+                                <div class="date">4</div>
+                            </th>
+                            <th>
+                                <div class="date">5</div>
+                            </th>
+                            <th>
+                                <div class="date">6</div>
+                            </th>
+                            <th>
+                                <div class="date">7</div>
+                            </th>
+                            <th>
+                                <div class="date">8</div>
+                            </th>
+                            <th>
+                                <div class="date">9</div>
+                            </th>
+                        </tr>
+                        <tr>
+                            <th>
+                                <div class="date">10</div>
+                            </th>
+                            <th>
+                                <div class="date">11</div>
+                            </th>
+                            <th>
+                                <div class="date">12</div>
+                            </th>
+                            <th>
+                                <div class="date">13</div>
+                            </th>
+                            <th>
+                                <div class="date">14</div>
+                            </th>
+                            <th>
+                                <div class="date">15</div>
+                            </th>
+                            <th>
+                                <div class="date">16</div>
+                            </th>
+                        </tr>
+                        <tr>
+                            <th>
+                                <div class="date">17</div>
+                            </th>
+                            <th>
+                                <div class="date">18</div>
+                            </th>
+                            <th>
+                                <div class="date">19</div>
+                            </th>
+                            <th>
+                                <div class="date">20</div>
+                            </th>
+                            <th>
+                                <div class="date">21</div>
+                            </th>
+                            <th>
+                                <div class="date">22</div>
+                            </th>
+                            <th>
+                                <div class="date">23</div>
+                            </th>
+                        </tr>
+                        <tr>
+                            <th>
+                                <div class="date">24</div>
+                            </th>
+                            <th>
+                                <div class="date">25</div>
+                            </th>
+                            <th>
+                                <div class="date">26</div>
+                            </th>
+                            <th>
+                                <div class="date">27</div>
+                            </th>
+                            <th>
+                                <div class="date">28</div>
+                            </th>
+                            <th>
+                                <div class="date">1</div>
+                            </th>
+                            <th>
+                                <div class="date">2</div>
+                            </th>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
         </div>
