add calendar event

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             <th>Sat</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <!-- <tbody>
                         <tr>
                             <th>
                                 <div class="date">27</div>
@@ -321,7 +321,30 @@
                                 <div class="date">2</div>
                             </th>
                         </tr>
-                    </tbody>
+                        <tr>
+                            <th>
+                                <div class="date">24</div>
+                            </th>
+                            <th>
+                                <div class="date">25</div>
+                            </th>
+                            <th>
+                                <div class="date">26</div>
+                            </th>
+                            <th>
+                                <div class="date">27</div>
+                            </th>
+                            <th>
+                                <div class="date">28</div>
+                            </th>
+                            <th>
+                                <div class="date">1</div>
+                            </th>
+                            <th>
+                                <div class="date">2</div>
+                            </th>
+                        </tr>
+                    </tbody> -->
                 </table>
             </div>
         </div>
