update choose trip section

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             </div>
         </div>
         <div class="choose-trip">
-            <h3>Start rolling rigt now</h3>
+            <h3>Click on type and choose trip</h3>
             <div class="select-aria">
                 <a class="select-item" href="#">Pussy trip</a>
                 <a class="select-item" href="#">Savage trip</a>
@@ -226,26 +226,24 @@
                 <a class="select-item" href="#">Speed hack trip</a>
             </div>
             <div class="slide-trips">
-                <div class="as">as</div>
-                <div class="as">as</div>
-                <div class="as">as</div>
-                <div class="as">as</div>
-                <div class="as">1</div>
+                <img src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
+                <img src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
+                <img src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
+                <img src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
+                <img src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
+                <img src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
+                <img src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
+                <img src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
+                <img src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
+                <img src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
             </div>
-            <a href="" class="btn btn-danger">Start rolling</a>
+            <a href="" class="btn btn-danger">Start rolling now</a>
         </div>
     </section>
     <script src="src/javascript/jquery-3.3.1.min.js"></script>
     <script src="src/assets/slick/slick.min.js"></script>
     <script src="./dist/main.js"></script>
     <script src="./src/javascript/app.js"></script>
-    <script>
-        $('.slide-trips').slick({
-            infinite: true,
-            slidesToShow: 3,
-            slidesToScroll: 3
-        });
-    </script>
 </body>
 
 </html>
